update: gradle build guide